--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 
 
-        let socket = io("http://localhost:3000", {
+        let socket = io("wss://zoom-recording-0uiz.onrender.com", {
             transports: ['websocket'],
             upgrade: false
         });
