--- a/index.html
+++ b/index.html
@@ -21,13 +21,15 @@
 
         }
         .content{
-            flex : 9;
+            flex : 4;
+            
         }
         .input-container {
             flex : 1;
+            
             display: flex;
             justify-content: center;
-            align-items: center;
+            align-items: flex-start;
         }
         .input-container input {
             padding:12px;
