--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         import { io } from "https://cdn.socket.io/4.7.5/socket.io.esm.min.js";
 
         //const url = 'http://localhost:3000';
-        const url = 'https://zoom-recording-0uiz.onrender.com/';
+        const url = 'https://zoom-recording-0uiz.onrender.com';
 
         getUers();
 
