--- a/index.html
+++ b/index.html
@@ -173,11 +173,13 @@
         function getUers() {
             fetch(`${url}/users`).then((res) => res.json()).then(data => {
 
+                const usersList = document.getElementById("users-list")
+                usersList.innerHTML = ""
                 Object.keys(data).map(id => {
                     const li = document.createElement("li")
                     li.innerHTML = data[id];
 
-                    const usersList = document.getElementById("users-list")
+                    
                     usersList.append(li)
 
 
