--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <div class="container">
 
 
-        <h1>Server</h1>
+        <h1>Master</h1>
         <div class="content">
             <h1>Pepole in the room</h1>
             <ul id="users-list">
